Fix horizontal scroll on collections page

--- a/src/app/collections/collections.module.css
+++ b/src/app/collections/collections.module.css
@@ -1,6 +1,6 @@
 
 .wrapper{
-    margin: 0 auto;
+    /* margin: 0 auto; */
     padding: 1rem;
     width: 100%;
     justify-self: center;
